add auth and update payment
