# app/Models/users.php
@@ -1,21 +1,0 @@
-<?php
-
-namespace App\Models;
-
-use Illuminate\Database\Eloquent\Model;
-
-class users extends Model
-{
-    //
-    protected $fillable = [
-        'username',
-        'role',
-        'phoneNumber',
-        'email',
-        'password',
-    ];
-    protected $hidden = [
-        'password',
-        'remember_token',
-    ];
-}
