# routes/api.php
@@ -1,17 +1,27 @@
 <?php
 
+use App\Http\Controllers\Api\AuthController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\MidtransController;
 
-Route::get('/user', function (Request $request) {
-    return $request->user();
-})->middleware('auth:sanctum');
+Route::post('/register', [AuthController::class, 'register']);
+Route::post('/login', [AuthController::class, 'login'])->name('login');
 
-Route::get('/payments', [MidtransController::class, 'index']);
-Route::post('/payments', [MidtransController::class, 'store']);
-Route::get('/payments/{id}', [MidtransController::class, 'show']);
-Route::put('/payments/{id}', [MidtransController::class, 'update']);
+Route::middleware('auth:sanctum')->group(function () {
+    Route::post('/logout', [AuthController::class, 'logout']);
+    Route::get('/me', [AuthController::class, 'me']);
+
+    // user access
+    Route::get('/payments', [MidtransController::class, 'index']);
+    Route::get('/payments/{id}', [MidtransController::class, 'show']);
+    Route::post('/payments', [MidtransController::class, 'store']);
+
+    // admin access
+    Route::middleware('role:admin')->group(function () {
+        Route::put('/payments/{id}', [MidtransController::class, 'update']);
+    });
+}); 
+
 Route::delete('/payments/{id}', [MidtransController::class, 'destroy']);
-
 Route::post('/midtrans/callback', [MidtransController::class, 'callback']);
